# OwL-Browser

./: .gitignore  About this Browser.txt  Cargo.toml  README.md  commit_and_push.sh
app/: Cargo.toml
app/src/: main.rs
assets/: home.css  home.html  home.js  ui.css  ui.html  ui.js
docs/: ARCHITECTURE.md
engine/: Cargo.toml
engine/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs  pressure.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
src/: app.rs  assets.rs  ipc.rs  main.rs  state.rs
storage/: Cargo.toml
storage/src/: lib.rs
tabs/: Cargo.toml
tabs/src/: lib.rs
test/: test_ui.html  ui.css  ui.js
ui/: Cargo.toml
ui/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
