[package]
name = "owl-browser"
version = "0.1.0"
edition = "2021"

authors = ["OwL Browser Contributors"]
description = "OwL Browser: Ultra. Quick. Light. Built for Linux."
license = "MIT"

[dependencies]
# GTK4 + libadwaita shell
adw = { package = "libadwaita", version = "0.8" }
gtk = { package = "gtk4", version = "0.10" }

# WebKitGTK 6.0 (GTK4 + libsoup3)
webkit6 = "0.5"

# IPC message encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding for search queries
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true