[workspace]
members = [
    "app",
    "engine",
    "scheduler",
    "tabs",
    "memory",
    "ui",
    "storage",
    "util",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OwL Browser Contributors"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
