[package]
name = "owl-browser"
description = "OwL Browser: Ultra. Quick. Light. Built for Linux."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
adw = { package = "libadwaita", version = "0.8" }
gtk = { package = "gtk4", version = "0.10" }
webkit6 = "0.5"

engine = { path = "../engine", package = "owl-engine" }
scheduler = { path = "../scheduler", package = "owl-scheduler" }
tabs = { path = "../tabs", package = "owl-tabs" }
memory = { path = "../memory", package = "owl-memory" }
