[package]
name = "owl-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

description = "Web engine integration for OwL Browser."

[dependencies]
gtk = { package = "gtk4", version = "0.10" }
webkit6 = "0.5"
tabs = { path = "../tabs", package = "owl-tabs" }
scheduler = { path = "../scheduler", package = "owl-scheduler" }
